2015-11-18  Gavin Salam  <gavin.salam@cern.ch>

	* tarit.sh:
	added *.pl to tarit

2013-05-12  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* Makefile (CXXFLAGS): 
	added -fPIC -DPIC to compiler flags

2012-12-30  Gavin Salam  <salam@lpthe.jussieu.fr>

	* CmdLine.cc:
	  modified output of CmdLine::command_line(), so that
	  arguments containing one of "!#|<> or a space are output
	  enclosed in single quotes.

	* AUTHORS: updated email address to be CERN

2011-10-24  Gavin Salam  <gsalam@macth69.cern.ch>

	* AUTHORS: updated the address

2010-02-15  Gavin Salam  <salam@lpthe.jussieu.fr>

	* README: updated this 
	* Makefile: actually added this...
	* moved a bunch of unused build-related things into unused

2010-02-04  Gavin Salam  <salam@lpthe.jussieu.fr>

	* Makefile: 
	  created a proper Makefile (rather than one that just calls
	  scons). 

2008-08-13  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.hh: 
	* CmdLine.cc: 
	  instead of exit(-1), decided to throw an error, with the option
	  of turning off the message -- intended to be more C++ like.

2008-07-17  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.cc: 
	  added use of <cstdlib> for access to exit(...) [needed for
	  g++-4.3] 

2007-11-18  Gavin Salam  <salam@lpthe.jussieu.fr>

	* CmdLine.cc|hh: 
	  added assert_all_options_used()

2007-10-02  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* configure.ac    *** ADDED ***
	* Makefile.am     *** ADDED ***
        * NEWS            *** ADDED ***
	  added these on way to getting a proper automake type system

2007-07-16  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.cc|hh: 
	  added the unix_uname() member function.

2007-06-30  Gavin Salam  <salam@lpthe.jussieu.fr>

	* make-enum-IO.pl: 
	  added this perl file to help with automated generation of I/O
	  for enums -- does not quite have full flexibility yet
	  (e.g. enums inside classes), but should slowly get there.

	* CmdLine.hh: 

	  added CmdLine::value_prefix<T>(opt,prefix), which interprets