@@ -1,0 +1,3 @@
+*.o
+example
+libCmdLine.a
